<resources>
    <string name="app_name">Project-Wolf-3</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingreso</string>
    <string name="fullname">Nombre</string>
    <string name="email">Correo</string>
    <string name="signup">Registro</string>
    <string name="login_here">¿Ya tienes cuenta? Ingreso</string>
    <string name="ahorro">Ahorro</string>
    <string name="inversion">Inversión</string>
    <string name="objetivo">Objetivo</string>
    <string name="nuevo_ahorro">Nuevo Ahorro Individual</string>
    <string name="semanal">Semanal</string>
    <string name="quincenal">Quincenal</string>
    <string name="mensual">Mensual</string>
    <string name="_12">12</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="ahorro_individual">Ahorro Individual</string>
    <string name="ahorro_grupal">Ahorro Grupal</string>
    <string name="registro_page">¿No tienes cuenta? Registro</string>
    <string name="plazo_title">Aporte cada plazo:</string>
    <string name="min_amount">100</string>
    <string name="log_out">Cerrar</string>
    <string name="forgot_text">¿Olvidaste la contraseña?</string>
    <string name="numero_plazos">Número de plazos</string>
    <string name="min_months">6</string>
    <string name="ahorrar">Ahorrar</string>
    <string name="perfil_de_usuario">Perfil de Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="balance_ejemplo">Balance: $1,000</string>
    <string name="telefono_ejemplo">5555555555</string>
    <string name="rango_ejemplo">Rango: Cachorro</string>
    <string name="correo_ejemplo">correo</string>
    <string name="verificar">Verificar</string>
    <string name="cambiar_contra">Cambiar contraseña</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="verificacion_telefono">Verificación de Teléfono</string>
    <string name="guion">-</string>
    <string name="reenviar">Reenviar</string>
    <string name="editar_cuenta">¿Editar cuenta?</string>
    <string name="editar_perfil_title">Editar Perfil</string>
    <string name="lada_ejemplo">52</string>
    <string name="cancelar">¿Cancelar?</string>
    <string name="_52">52</string>
    <string name="o">O</string>
    <string name="telefono">Teléfono</string>
    <string name="no_conexion">Sin conexión de internet</string>
    <string name="verif_phone_formatted">998 241-7342</string>
    <string name="pay">Pay</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="ganancia_string">Ganancia</string>
    <string name="balance_string">Balance</string>
    <string name="inversi_n_string">Inversión</string>
    <string name="name_string">NAME</string>
    <string name="all_string">All</string>
    <string name="balance_ek1_string">Balance</string>
    <string name="date__15_septiembre_2021_string">Date: 15/Septiembre/2021</string>
    <string name="date__09_septiembre_2021_string">Date: 09/Septiembre/2021</string>
    <string name="date__26_agosto_2021_string">Date: 26/Agosto/2021</string>
    <string name="date__26_agosto_2021_ek1_string">Date: 26/Agosto/2021</string>
    <string name="date__24_agosto_2021_string">Date: 24/Agosto/2021</string>
    <string name="inversión_ek1_string">Inversión</string>
    <string name="inversión_ek2_string">Inversión</string>
    <string name="inversión_ek3_string">Inversión</string>
    <string name="inversión_ek4_string">Inversión</string>
    <string name="ganancia_ek1_string">Ganancia</string>
    <string name="ganancia_ek2_string">Ganancia</string>
    <string name="ganancia_ek3_string">Ganancia</string>
    <string name="ganancia_ek4_string">Ganancia</string>
    <string name="balance_ek2_string">Balance</string>
    <string name="balance_ek3_string">Balance</string>
    <string name="balance_ek4_string">Balance</string>
    <string name="balance_ek5_string">Balance</string>
    <string name="__3_97__string">-3.97%</string>
    <string name="__0_32__string">-0.32%</string>
    <string name="__4_96__string">+4.96%</string>
    <string name="__4_96__ek1_string">+4.96%</string>
    <string name="__0_97__string">-0.97%</string>
    <string name="___100_00_string">$ 100.00</string>
    <string name="___100_00_ek1_string">$ 100.00</string>
    <string name="___850_00_string">$ 850.00</string>
    <string name="___300_00_string">$ 300.00</string>
    <string name="___300_00_ek1_string">$ 300.00</string>
    <string name="____3_97_string">$ -3.97</string>
    <string name="____0_97_string">$ -0.97</string>
    <string name="____2_67_string">$ -2.67</string>
    <string name="____14_89_string">$ +14.89</string>
    <string name="____14_89_ek1_string">$ +14.89</string>
    <string name="__96_03_string">$96.03</string>
    <string name="__99_03_string">$99.03</string>
    <string name="__847_33_string">$847.33</string>
    <string name="__314_89_string">$314.89</string>
    <string name="__314_89_ek1_string">$314.89</string>
    <string name="inversiones_ek3_string">Inversiones</string>
    <string name="name_ek1_string">NAME</string>
    <string name="all_ek1_string">All</string>
    <string name="balance_ek6_string">Balance</string>
    <string name="guardar_cambios_string">Guardar cambios</string>
    <string name="profile_string">Profile</string>
    <string name="_back_string">Back</string>
    <string name="marycruz_chávez_fernández_string">Marycruz Chávez Fernández</string>
    <string name="correo_electrónico_string">Correo electrónico</string>
    <string name="número_celular_string">Número celular</string>
    <string name="nombre_string">Nombre</string>
    <string name="me_marycruz_hotmail_com_string">me.marycruz@hotmail.com</string>
    <string name="__52_998_461_2560_string">+52 998-461-2560</string>
    <string name="quintana_roo_string">Quintana Roo</string>
    <string name="cancún_string">Cancún</string>
    <string name="estado_string">Estado</string>
    <string name="ciudad_string">Ciudad</string>
    <string name="log_out_string">Cerrar Sesión</string>
    <string name="profile_ek1_string">Profile</string>
    <string name="_back_ek1_string">Back</string>
    <string name="marycruz_ch_vez_fern_ndez_ek1_string">Marycruz Chávez Fernández</string>
    <string name="balance_ek7_string">Balance</string>
    <string name="___string">$</string>
    <string name="_700_00_string">700.00</string>
    <string name="me_marycruz_hotmail_com_ek1_string">me.marycruz@hotmail.com</string>
    <string name="canc_n__quintana_roo_string">Cancún, Quintana Roo</string>
    <string name="__52_998_461_2560_ek1_string">+52 998-461-2560</string>
    <string name="mxn_string">mxn</string>
    <string name="invertir_string">Invertir</string>
    <string name="name_ek2_string">NAME</string>
    <string name="nueva_inversión_ek3_string">Nueva Inversión</string>
    <string name="meses__string">Meses:</string>
    <string name="monto_de_ahorro__string">Monto de ahorro:</string>
    <string name="monto_total__string">Monto total:</string>
    <string name="comisión__string">Comisión: </string>
    <string name="___ek1_string">$</string>
    <string name="___ek2_string">$</string>
    <string name="___ek3_string">$</string>
    <string name="___ek4_string">%</string>
    <string name="___ek5_string">%</string>
    <string name="___ek6_string">$</string>
    <string name="___ek7_string">$</string>
    <string name="_3_00_string">3.00</string>
    <string name="_5_00_string">5.00</string>
    <string name="_1_00_string">1.00</string>
    <string name="stop_loss_string">Stop Loss</string>
    <string name="_6_string">6</string>
    <string name="_100_string">100</string>
    <string name="_109_00_string">109.00</string>
    <string name="retirar_string">Retirar</string>
    <string name="name_ek3_string">NAME</string>
    <string name="date__15_septiembre_2021_ek1_string">Date: 15/Septiembre/2021</string>
    <string name="inversión_ek5_string">Inversión</string>
    <string name="ganancia_ek5_string">Ganancia</string>
    <string name="balance_ek11_string">Balance</string>
    <string name="estrategia_string">Estrategia</string>
    <string name="__3_97__ek1_string">-3.97%</string>
    <string name="___100_00_ek2_string">$ 100.00</string>
    <string name="____3_97_ek1_string">$ -3.97</string>
    <string name="__96_03_ek1_string">$96.03</string>
    <string name="balance_ek12_string">Balance</string>
    <string name="stop_loss_ek1_string">Stop Loss</string>
    <string name="estrategia_ek1_string">Estrategia</string>
    <string name="estrategia_ek2_string">Estrategia</string>
    <string name="estrategia_ek3_string">Estrategia</string>
    <string name="retirar_ek1_string">Retirar</string>
    <string name="name_ek4_string">NAME</string>
    <string name="balance_total_ek3_string">Balance Total</string>
    <string name="__0_54__string">+0.54%</string>
    <string name="date__20_septiembre_2021_string">Date: 20/Septiembre/2021</string>
    <string name="inversión_ek6_string">Inversión</string>
    <string name="ganancia_ek6_string">Ganancia</string>
    <string name="balance_ek13_string">Balance</string>
    <string name="estrategias_string">Estrategias</string>
    <string name="___1350_00_string">$ 1350.00</string>
    <string name="____7_28_string">$ +7.28</string>
    <string name="__1_357_28_string">$1,357.28</string>
    <string name="estrategia_1_string">Estrategia 1</string>
    <string name="estrategia_2_string">Estrategia 2</string>
    <string name="estrategia_3_string">Estrategia 3</string>
    <string name="estrategia_4_string">Estrategia 4</string>
    <string name="mxn_ek1_string">mxn</string>
    <string name="pagar_string">Pagar</string>
    <string name="name_ek5_string">NAME</string>
    <string name="pasarela_de_pago_string">Pasarela de Pago</string>
    <string name="cvc_string">CVC </string>
    <string name="c_p__string">C.P. </string>
    <string name="nombre_ek1_string">Nombre </string>
    <string name="apellidos_string">Apellidos </string>
    <string name="fecha_de_vencimiento_string">Fecha de vencimiento</string>
    <string name="estado_ek1_string">Estado</string>
    <string name="ciudad_ek1_string">Ciudad</string>
    <string name="num_ro_de_tarjeta_string">Número de tarjeta</string>
    <string name="_1234_1234_1234_1234_string">1234 1234 1234 1234 </string>
    <string name="mm_aa_string">MM/AA</string>
    <string name="contraseña_string">Contraseña</string>
    <string name="correo_electrónico_ek1_string">Correo Electrónico</string>
    <string name="___olvidaste_tu_contraseña__string"><u>Olvidaste tu contraseña?</u></string>
    <string name="ingresar_string">Ingresar</string>
    <string name="___no_tienes_una_cuenta__regístrate_string">No tienes una cuenta? <u>Regístrate</u></string>
    <string name="recordarme_string">Recordarme</string>
    <string name="name_ek6_string">NAME</string>
    <string name="iniciar_sesión_string">Iniciar sesión</string>
    <string name="correo_eletrónico_string">Correo eletrónico</string>
    <string name="enviar_código_string">Enviar código</string>
    <string name="recuperar_contraseña_string">Recuperar contraseña</string>
    <string name="introduce_el_correo_electrónico_registrado_string">Introduce el correo electrónico registrado</string>
    <string name="name_ek7_string">NAME</string>
    <string name="correo_electrónico_ek2_string">Correo electrónico</string>
    <string name="nombre_ek2_string"> Nombre </string>
    <string name="número_de_celular_string">Número de celular</string>
    <string name="contraseña_ek1_string">Contraseña</string>
    <string name="registrar_string">Registrar</string>
    <string name="___tienes_una_cuenta__inicia_sesión_string">Tienes una cuenta? </string>
    <string name="inicia_sesio"><u>Inicia sesión</u></string>
    <string name="name_ek8_string">NAME</string>
</resources>